--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "tsc"
   },
-  "dependencies": {},
   "devDependencies": {
+    "sass": "^1.83.0",
     "typescript": "^5.5.3"
   },
   "private": true
