--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "odin-library",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc"
